@@ -5,6 +5,9 @@ Release date:
 
 New features:
 
+* Implement a note frequency dialog
+  - Tools => Note Frequencies
+
 Bug fixes:
 
 Other:
